package br.nemo.immigrant.ontology.entity.stakeholders.models;

public enum ScrumRole {
    DEVELOPER,
    SCRUMMASTER,
    PRODUCTOWNER,
    CLIENT
}